fix: jump to first page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,6 +24,7 @@
 }
 .logo{
     height:80px;
+    cursor: pointer;
 }
 #lines{
     width:70px;
